APIM publisher theme related fixes - noty theme fixes and z-index issue with nav-bar fixed

--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/themes/wso2/css/custom.css
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/themes/wso2/css/custom.css
@@ -728,3 +728,10 @@ input.ep-field{ min-width: 50%;}
     -moz-border-radius: 0px;
     border-radius: 0px;
 }
+
+.list-group-item-success .noty_text,
+.list-group-item-info .noty_text,
+.list-group-item-warning .noty_text,
+.list-group-item-danger .noty_text{
+    color:#fff;
+}
